2011-04-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Add new tests for Sauvola algorithms.

	* tests/binarization/Makefile.am: Add new targets.

	* tests/binarization/sauvola.cc,
	* tests/binarization/sauvola_ms.cc: New.

	* tests/binarization/sauvola.ref.pbm,
	* tests/binarization/sauvola_ms.ref.pbm: New test data.

	* tests/data.hh.in: Add a new path.

2011-04-06  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/filter/object_groups_size_ratio.hh: Fix compilation.

2011-04-06  Guillaume Lazzara  <z@lrde.epita.fr>

	Rename few routines.

	* scribo/estim/object_groups_v_thickness.hh,
	* scribo/filter/object_groups_v_thickness.hh: Rename as...

	* scribo/estim/object_groups_mean_width.hh,
	* scribo/filter/object_groups_mean_width.hh: ... this.

2011-04-06  Guillaume Lazzara  <z@lrde.epita.fr>

	Add more tests.

	* tests/filter/Makefile.am: Add new targets.

	* tests/filter/object_groups_mean_width.cc,
	* tests/filter/object_groups_size_ratio.cc,
	* tests/filter/object_groups_small.cc,
	* tests/filter/object_groups_with_holes.cc,
	* tests/filter/object_links_bbox_h_ratio.cc,
	* tests/filter/object_links_bbox_overlap.cc,
	* tests/filter/object_links_bbox_w_ratio.cc,
	* tests/filter/object_links_bottom_aligned.cc,
	* tests/filter/object_links_center_aligned.cc,
	* tests/filter/object_links_left_aligned.cc,
	* tests/filter/object_links_right_aligned.cc,
	* tests/filter/object_links_top_aligned.cc: New.

	* scribo/tests/img/the_valleys.pbm: New test data.

2011-04-06  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes in Scribo.

	* scribo/core/component_features_data.hh: Fix default
	attributes initialization.

	* scribo/core/line_info.hh: Compute color and boldness if
	available in components data.

	* scribo/filter/object_links_left_aligned.hh,
	* scribo/filter/object_links_right_aligned.hh: Fix doc.

	* scribo/preprocessing/rotate_90.hh: Disable preconditions.

	* scribo/primitive/extract/alignments.hh: Avoid a warning.
