@@ -16,6 +16,12 @@
 
 include $(top_srcdir)/scribo/tests/tests.mk
 
+EXTRA_DIST = 				\
+	  alignment_1.ref.png		\
+	  alignment_2.ref.png		\
+	  alignment_3.ref.png		\
+	  alignment_4.ref.png
+
 check_PROGRAMS =
 
 if HAVE_MAGICKXX
